--- a/about.html
+++ b/about.html
@@ -220,8 +220,8 @@
                         <div class="footer__option__item">
                             <h5>Contact to Me</h5>
                             <ul>
-                                <li><a href="#">live:.cid.777713b9b57f5e61</a></li>
-                                <li><a href="#">@Coder718</a></li>
+                                <li><a href="#">live:.cid.95a01bc0735cc007</a></li>
+                                <li><a href="#">@kindlyman</a></li>
                                 <!-- <li><a href="#">+63 946 652 3514</a></li> -->
                             </ul>
                         </div>
@@ -229,7 +229,7 @@
                     <div class="col-lg-4 col-md-12">
                         <div class="footer__option__item">
                             <h5>Newsletter</h5>
-                            <p>openmind1937@gmail.com, panda95718@gmail.com</p>
+                            <p>kindlyman343423@gmail.com, seriousfuzzy1211@gmail.com</p>
                             <form action="#">
                                 <input type="text" placeholder="Email">
                                 <button type="submit"><i class="fa fa-send"></i></button>
